<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="user"
            type="com.smartpan.smartpaninterviewtask.models.User" />

        <variable
            name="loginView"
            type="com.smartpan.smartpaninterviewtask.modules.login.LoginActivity" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".modules.activities.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_launcher_background"
                android:src="@drawable/ic_launcher_foreground" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/editTextLoginUsername"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="4dp"
                    android:text="@{user.username}" />
                    <!--android:text="@{loginRequest.username}" />-->
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/editTextLoginPassword"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@{user.password}" />
                    <!--android:text="@{loginRequest.password}" />-->

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonLoginLogin"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:text="@string/login" />
            <!--android:onClick="@{() -> loginView.OnClickLoginButton(loginRequest)}"-->


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/haven_t_an_account_register_now"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonLoginRegister"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:text="@string/register" />

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progressBarLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

    </ScrollView>
</layout>
    